--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,19 @@
 # Ngrok Configuration
-# Get your token at https://dashboard.ngrok.com/get-started/your-authtoken
 NGROK_AUTHTOKEN=your_ngrok_token_here
 
-# PostgreSQL Configuration (If using internal service)
-DB_USER=postgres
-DB_PASSWORD=yourpassword
-DB_NAME=split_the_bill
+# Telegram Bot Token
+TG_TOKEN=your_telegram_bot_token_here
+
+# Database Configuration
+DATABASE_URL=sqlite:///./split_the_bill.db
+
+# PostgreSQL Configuration (External or Internal)
+DB_HOST=localhost
+DB_PORT=5432
+DB_USER=your_db_user
+DB_PASSWORD=your_db_password
+DB_NAME=your_db_name
+
+# Frontend Configuration
+NEXT_PUBLIC_API_URL=/api
+NEXT_PUBLIC_TELEGRAM_BOT_ID=your_bot_id_here
