feat: initialize core frontend application with Telegram Web App integration, i18n, and Cloudflare Tunnel setup

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-# Ngrok Configuration
-NGROK_AUTHTOKEN=your_ngrok_token_here
+# Cloudflare Tunnel Configuration
+CLOUDFLARE_TUNNEL_TOKEN=your_cloudflare_tunnel_token_here
 
 # Telegram Bot Token
 TG_TOKEN=your_telegram_bot_token_here
@@ -16,4 +16,4 @@ DB_NAME=your_db_name
 
 # Frontend Configuration
 NEXT_PUBLIC_API_URL=/api
-NEXT_PUBLIC_TELEGRAM_BOT_ID=your_bot_id_here
+NEXT_PUBLIC_TELEGRAM_BOT_USERNAME=your_bot_username_here # Without @, e.g. SplitTheBillBot
