feat: Implement core bill splitting and participant management services, real-time event notifications, Nginx proxy configuration, and testing setup.

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
+# Environment Mode (development or production)
+ENV=development
+
 # Cloudflare Tunnel Configuration
 CLOUDFLARE_TUNNEL_TOKEN=your_cloudflare_tunnel_token_here
 
