--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -14,6 +14,24 @@ server {
         proxy_set_header Connection "upgrade";
     }
 
+    # SSE Events specific configuration
+    location ~ ^/api/bills/[0-9]+/events$ {
+        proxy_pass http://backend:8000;
+        proxy_http_version 1.1;
+        proxy_set_header Connection "";
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        
+        # SSE specific
+        proxy_buffering off;
+        proxy_cache off;
+        proxy_read_timeout 3600s;
+        proxy_send_timeout 3600s;
+        chunked_transfer_encoding on;
+    }
+
     # Frontend
     location / {
         proxy_pass http://frontend:3000;
