--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,19 +2,22 @@ server {
     listen 80;
     server_name localhost;
 
-    # Backend API
-    location /api/ {
+    location ~ ^/api/(health)?/?$ {
         proxy_pass http://backend:8000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
     }
 
-    # SSE Events specific configuration
+    location ~ ^/api/users(/([0-9]+(/bills)?)?)?/?$ {
+        proxy_pass http://backend:8000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
     location ~ ^/api/bills/[0-9]+/events$ {
         proxy_pass http://backend:8000;
         proxy_http_version 1.1;
@@ -24,7 +27,6 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         
-        # SSE specific
         proxy_buffering off;
         proxy_cache off;
         proxy_read_timeout 3600s;
@@ -32,7 +34,17 @@ server {
         chunked_transfer_encoding on;
     }
 
-    # Frontend
+    location ~ ^/api/bills(/([0-9]+(/(items(/[0-9]+)?|participants(/[0-9]+(/payment)?)?|split-(equally|remainder)|assign-amount|join|close))?)?)?/?$ {
+        proxy_pass http://backend:8000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    location /api/ {
+        return 403;
+    }
     location / {
         proxy_pass http://frontend:3000;
         proxy_set_header Host $host;
