--- a/.env.example
+++ b/.env.example
@@ -1,22 +1,17 @@
-# Environment Mode (development or production)
 ENV=development
 
-# Cloudflare Tunnel Configuration
-CLOUDFLARE_TUNNEL_TOKEN=your_cloudflare_tunnel_token_here
+COMPOSE_PROFILES=
 
-# Telegram Bot Token
-TG_TOKEN=your_telegram_bot_token_here
+CLOUDFLARE_TUNNEL_TOKEN=
+TG_TOKEN=
 
-# Database Configuration
 DATABASE_URL=sqlite:///./split_the_bill.db
 
-# PostgreSQL Configuration (External or Internal)
 DB_HOST=localhost
 DB_PORT=5432
-DB_USER=your_db_user
-DB_PASSWORD=your_db_password
-DB_NAME=your_db_name
+DB_USER=
+DB_PASSWORD=
+DB_NAME=
 
-# Frontend Configuration
 NEXT_PUBLIC_API_URL=/api
-NEXT_PUBLIC_TELEGRAM_BOT_USERNAME=your_bot_username_here # Without @, e.g. SplitTheBillBot
+NEXT_PUBLIC_TELEGRAM_BOT_USERNAME=
