feat: Implement core application infrastructure with Docker Compose, Nginx, and initial backend services including database integration.

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,8 @@
 ENV=development
-
-COMPOSE_PROFILES=
+COMPOSE_PROFILES=dev
 
 CLOUDFLARE_TUNNEL_TOKEN=
 TG_TOKEN=
-
-DATABASE_URL=sqlite:///./split_the_bill.db
 
 DB_HOST=localhost
 DB_PORT=5432
