--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,24 +1,14 @@
-# Use an official Node runtime as a parent image
 FROM node:20-slim AS base
-
-# Set the working directory in the container
 WORKDIR /app
 
-# Install dependencies only when needed
 FROM base AS deps
 COPY package.json package-lock.json ./
 RUN npm install
 
-# Rebuild the source code only when needed
 FROM base AS builder
 WORKDIR /app
 COPY --from=deps /app/node_modules ./node_modules
 COPY . .
-
-# Next.js collects completely anonymous telemetry data about general usage.
-# Learn more here: https://nextjs.org/telemetry
-# Uncomment the following line in case you want to disable telemetry during the build.
-# ENV NEXT_TELEMETRY_DISABLED 1
 
 ARG NEXT_PUBLIC_API_URL
 ENV NEXT_PUBLIC_API_URL=$NEXT_PUBLIC_API_URL
@@ -27,7 +17,6 @@ ENV NEXT_PUBLIC_TELEGRAM_BOT_USERNAME=$NEXT_PUBLIC_TELEGRAM_BOT_USERNAME
 
 RUN npm run build
 
-# Final runner stage
 FROM base AS runner
 WORKDIR /app
 
@@ -38,17 +27,23 @@ ENV NODE_ENV=$ENV
 RUN addgroup --system --gid 1001 nodejs
 RUN adduser --system --uid 1001 nextjs
 
+# Copy common assets
 COPY --from=builder /app/public ./public
+COPY --from=builder /app/package.json ./package.json
 
-# Automatically leverage output traces to reduce image size
+# Copy standalone output for production
 COPY --from=builder /app/.next/standalone ./
 COPY --from=builder /app/.next/static ./.next/static
+
+# Copy full node_modules from deps stage to support development mode (npm run dev)
+COPY --from=deps /app/node_modules ./node_modules
+
+# Ensure permissions for the entire app directory
+RUN chown -R nextjs:nodejs /app
 
 USER nextjs
 
 EXPOSE 3000
 ENV PORT 3000
 
-# Dynamically run development or production server
 CMD if [ "$ENV" = "production" ]; then node server.js; else npm run dev; fi
-
