--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,33 @@ services:
       context: ./backend
     env_file:
       - .env
+    environment:
+      - DB_HOST=db
     restart: always
+    networks:
+      - app-network
+    depends_on:
+      db:
+        condition: service_healthy
+        required: false
+
+  db:
+    image: postgres:17-alpine
+    restart: always
+    profiles: ["dev"]
+    environment:
+      POSTGRES_USER: ${DB_USER:-postgres}
+      POSTGRES_PASSWORD: ${DB_PASSWORD:-secret}
+      POSTGRES_DB: ${DB_NAME:-split_the_bill_db}
+    ports:
+      - "${DB_PORT:-5432}:5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
     networks:
       - app-network
 
@@ -30,18 +56,37 @@ services:
     networks:
       - app-network
 
-  nginx:
+  nginx-dev:
     image: nginx:latest
+    container_name: nginx
+    profiles: ["dev"]
+    volumes:
+      - ./nginx/nginx-dev.conf:/etc/nginx/conf.d/default.conf:ro
+    networks:
+      app-network:
+        aliases:
+          - nginx
     ports:
       - "80:80"
-    volumes:
-      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf:ro
     depends_on:
       - backend
       - frontend
-    restart: always
+
+  nginx-prod:
+    image: nginx:latest
+    container_name: nginx
+    profiles: ["prod"]
+    volumes:
+      - ./nginx/nginx-prod.conf:/etc/nginx/conf.d/default.conf:ro
     networks:
-      - app-network
+      app-network:
+        aliases:
+          - nginx
+    ports:
+      - "80:80"
+    depends_on:
+      - backend
+      - frontend
 
   cloudflared:
     image: cloudflare/cloudflared:latest
@@ -61,3 +106,6 @@ services:
 networks:
   app-network:
     driver: bridge
+
+volumes:
+  postgres_data:
