Refactor: Rename Makefile commands for database and test operations and update the `frontend` service's `nginx` dependency in docker-compose.yml.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -99,7 +99,7 @@ services:
       - --no-autoupdate
       - run
     depends_on:
-      - nginx
+      - nginx-prod
     networks:
       - app-network
 
