--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,13 +34,14 @@ services:
       - app-network
     restart: always
 
-  frontend:
+  frontend-dev:
     build:
       context: ./frontend
       args:
         - ENV=${ENV:-development}
         - NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL:-/api}
         - NEXT_PUBLIC_TELEGRAM_BOT_USERNAME=${NEXT_PUBLIC_TELEGRAM_BOT_USERNAME}
+    profiles: ["dev"]
     environment:
       - ENV=${ENV:-development}
       - NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL:-/api}
@@ -54,7 +55,29 @@ services:
     depends_on:
       - backend
     networks:
-      - app-network
+      app-network:
+        aliases:
+          - frontend
+
+  frontend-prod:
+    build:
+      context: ./frontend
+      args:
+        - ENV=${ENV:-production}
+        - NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL:-/api}
+        - NEXT_PUBLIC_TELEGRAM_BOT_USERNAME=${NEXT_PUBLIC_TELEGRAM_BOT_USERNAME}
+    profiles: ["prod"]
+    environment:
+      - ENV=${ENV:-production}
+      - NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL:-/api}
+      - NEXT_PUBLIC_TELEGRAM_BOT_USERNAME=${NEXT_PUBLIC_TELEGRAM_BOT_USERNAME}
+    restart: always
+    depends_on:
+      - backend
+    networks:
+      app-network:
+        aliases:
+          - frontend
 
   nginx-dev:
     image: nginx:latest
@@ -71,7 +94,7 @@ services:
     restart: always
     depends_on:
       - backend
-      - frontend
+      - frontend-dev
 
   nginx-prod:
     image: nginx:latest
@@ -88,7 +111,7 @@ services:
     restart: always
     depends_on:
       - backend
-      - frontend
+      - frontend-prod
 
   cloudflared:
     image: cloudflare/cloudflared:latest
