feat: Introduce `YouShareBlock` component for displaying user bill share and reactions, and add production Nginx configuration with SSE support.

--- a/nginx/nginx-prod.conf
+++ b/nginx/nginx-prod.conf
@@ -34,7 +34,7 @@ server {
         chunked_transfer_encoding on;
     }
 
-    location ~ ^/api/bills(/([0-9]+(/(items(/[0-9]+)?|participants(/[0-9]+(/payment)?)?|split-(equally|remainder)|assign-amount|join|close))?)?)?/?$ {
+    location ~ ^/api/bills(/([0-9]+(/(items(/[0-9]+)?|participants(/[0-9]+(/payment)?)?|split-(equally|remainder)|assign-amount|join|close|reactions))?)?)?/?$ {
         proxy_pass http://backend:8000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
