--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       - DB_HOST=${DB_HOST:-db}
     volumes:
       - ./backend:/app
-    command: ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
+    command: ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
     networks:
       app-network:
         aliases:
@@ -74,7 +74,6 @@ services:
     volumes:
       - ./frontend:/app
       - /app/node_modules
-      - /app/.next
     restart: always
     depends_on:
       - backend-dev
@@ -114,7 +113,7 @@ services:
         aliases:
           - nginx
     ports:
-      - "80:80"
+      - "8080:80"
     restart: always
     depends_on:
       - backend-dev
