--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -28,6 +28,8 @@ ENV ENV=$ENV \
 RUN addgroup --system --gid 1001 nodejs && \
     adduser --system --uid 1001 nextjs
 
+RUN mkdir -p .next && chown nextjs:nodejs .next
+
 COPY --from=builder --chown=nextjs:nodejs /app/public ./public
 COPY --from=builder --chown=nextjs:nodejs /app/package.json ./package.json
 COPY --from=builder --chown=nextjs:nodejs /app/.next/standalone ./
