--- a/nginx/nginx-production.conf
+++ b/nginx/nginx-production.conf
@@ -1,6 +1,7 @@
 server {
     listen 80;
     server_name localhost;
+    client_max_body_size 1M;
 
     location ~ ^/api/(health)?/?$ {
         proxy_pass http://backend:8000;
