--- a/nginx/nginx-development.conf
+++ b/nginx/nginx-development.conf
@@ -3,6 +3,12 @@ server {
     listen [::]:80;
     server_name localhost;
 
+    location /nginx_status {
+        stub_status;
+        allow 127.0.0.1;
+        deny all;
+    }
+
     # Backend API with extended timeouts for debugging
     location /api/ {
         proxy_pass http://backend:8000;
